# wm01-fire-horse

./: README.md  pyproject.toml
exercises/release/exercise-01/: 1 - First Steps.ipynb
exercises/release/exercise-02/: 1 - Control Flow and Data Structures.ipynb
exercises/release/exercise-03/: 1__SSH_CLI_Schnitzeljagd.ipynb
exercises/release/exercise-04/: 1 - Coding with an AI Assistant.ipynb  antarctic_penguins.csv
exercises/release/exercise-05/: 1__classes.ipynb  2__pandas_intro.ipynb  3__plot_csv.ipynb
exercises/release/exercise-06/: 1__numpy-basics.ipynb  2__Optimization_first_steps.ipynb
exercises/release/exercise-07/: 1__Image_analysis_1.ipynb  2__Image_analysis_2.ipynb  (+2 more)
lectures/lecture-01/: 1 - Course Introduction.ipynb  2 - Deconstructing blockly.ipynb  3 - Jupyter notebook environment.ipynb  4 - Python programming basics.ipynb  5 - Types and indexing.ipynb
lectures/lecture-02/: 1 - Slicing and coercion.ipynb  2 - Conditionals and loops.ipynb  3 - Lists, tuples, and dictionaries.ipynb  4 - Strings and f-strings.ipynb  5 - Reading CSV files.ipynb
lectures/lecture-03/: command_line_files_processes.ipynb
lectures/lecture-04/: 1 - Agentic coding.ipynb
lectures/lecture-05/: L05NB1_classes.ipynb  L05NB2_matplotlib.ipynb  L05NB3_pandas.ipynb
lectures/lecture-06/: L06NB1_numpy.ipynb  L06NB2_optimization.ipynb
lectures/lecture-07/: L07NB1_image_analysis.ipynb  L07NB2_erosion_and_blur.ipynb
lectures/lecture-08/: L08NB1_clustering.ipynb  L08NB2_pca.ipynb  L08NB3_pca_scrnaseq.ipynb  L08NB4_word2vec.ipynb  L08NB5_yolo.ipynb  glove_subset.npz
(+18 files in other folders)
