[project]
name = "sunbeam-ephemeral-project"
requires-python = "==3.14.6"
version = "0.1.4"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "scikit-image",
    "imageio",
    "imageio-ffmpeg",
    "jupyterlab",
    "seaborn",
    "nbgrader",
    "opencv-python",
    "ultralytics",
]
